--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
     </style>
+    <script
+      src="https://kit.fontawesome.com/5fa3277c41.js"
+      crossorigin="anonymous"
+    ></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React-Webpack Setup</title>
