Adding a linting and prettier rules

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
     />
     <style>
-      @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+      @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
     </style>
     <script
       src="https://kit.fontawesome.com/5fa3277c41.js"
@@ -16,7 +16,7 @@
     ></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React-Webpack Setup</title>
+    <title>Personal Website - Kevin Brauen</title>
   </head>
   <body>
     <div id="app"></div>
